--- a/index.css
+++ b/index.css
@@ -99,6 +99,44 @@ button:active {
   font-size: 1.1em;
 }
 
+.correct {
+  animation: yes 2s ease-in-out;
+}
+
+.wrong {
+  animation: no 1s ease-in-out;
+}
+
+@keyframes yes {
+  0% {
+    background-color: rgb(36, 36, 36);
+  }
+  50% {
+    background-color: rgb(76, 141, 101);
+  }
+  75% {
+    background-color: rgb(75, 180, 116);
+  }
+  100% {
+    background-color: rgb(80, 238, 140);
+  }
+}
+
+@keyframes no {
+  0% {
+    background-color: rgb(36, 36, 36);
+  }
+  50% {
+    background-color: rgb(141, 76, 76);
+  }
+  75% {
+    background-color: rgb(180, 75, 75);
+  }
+  100% {
+    background-color: rgb(202, 65, 65);
+  }
+}
+
 @media screen and (min-width: 31.25em) {
   body {
     font-size: 18px;
