--- a/index.css
+++ b/index.css
@@ -105,8 +105,12 @@ button:active {
   background-color: rgb(75, 180, 116);
 }
 
-.wrong {
-  animation: no 0.3s ease-in-out backwards;
+.wrongHigh {
+  animation: noHigh 0.3s ease-in-out;
+}
+
+.wrongLow {
+  animation: noLow 0.3s ease-in-out;
 }
 
 @keyframes yes {
@@ -124,7 +128,7 @@ button:active {
   }
 }
 
-@keyframes no {
+@keyframes noHigh {
   0% {
     background-color: rgb(36, 36, 36);
   }
@@ -136,6 +140,21 @@ button:active {
   }
   100% {
     background-color: rgb(141, 76, 76);
+  }
+}
+
+@keyframes noLow {
+  0% {
+    background-color: rgb(36, 36, 36);
+  }
+  50% {
+    background-color: rgb(76, 120, 141);
+  }
+  75% {
+    background-color: rgb(54, 151, 180);
+  }
+  100% {
+    background-color: rgb(42, 66, 146);
   }
 }
 
